Add POST for retrieve session info.
